ViewPager added to swipe between games